[package]
name = "buddy_allocator_workshop"
version = "0.1.0"
authors = ["restioson <restiosondev@gmail.com>"]

[dependencies]
static_assertions = "0.2.5"
structopt = "0.2.5"
array-init = "0.0.2"
failure = "0.1.1"
intrusive-collections = "0.7.0"
bit_field = "0.9.0"
flame = { version = "0.2.0", optional = true }
flamer = { version = "^0.2.0", optional = true }

[features]
default = []
flame_profile = ["flame", "flamer"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "rb_tree"
harness = false

[[bench]]
name = "bitmap"
harness = false

[profile.release]
debug = true